# quotifyai

./: .gitignore  README.md
frontend/: next.conf.js  package-lock.json  package.json
frontend/components/: FileInput.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/public/: animationData.json  animationData2.json
frontend/styles/: Home.module.css  globals.css
frontend/utils/: Gradient.js
server/: Makefile  generate.py  index.py  preprocessing.py  pyproject.toml  requirements.txt  summarize.py
server/scripts/: setup.sh
